* 2013-09-02 - marcus.klein@open-xchange.com

 - Fix for bug 28627: Fixed a typo in post installation scripts of open-xchange-subscribe package.

* 2013-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 28176: Return non-zero exit code in case an exception occurred
 - Fix for bug 28177: Added check for context existence and log appropriate message if it appears to not exist
 - Fix for bug 28610: Track optional ContextService separately, but not as needed service
 - Fix for bug 28612: Orderly check for already collected JSlob store operation to avoid DB conflict on batch insert attempt

* 2013-08-30 - thorben.betten@open-xchange.com

 - Fix for bug 28602: Don't close ThresholdFileHolder instance

* 2013-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 28414: No need for remote touch attempt if file is locally available

* 2013-08-29 - marcus.klein@open-xchange.com

 - Fix for bug 28008: Implemented Debian distribution specific dependencies to depend on the supported JDK.

* 2013-08-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 28459: Removed obsolete file storage identifiers in favor of ID based folder access

* 2013-08-28 - marcus.klein@open-xchange.com

 - Fix for bug 27858: Increased the default connection timeout for JMX connections from 2 to 15 seconds. Added additionally a command line
   tool option to be able to provide even higher connection timeouts.

* 2013-08-28 - thorben.betten@open-xchange.com

 - Fix for bug 26716: Ensure possible double slashes are sanitized when reading "object_link" property
 - Fix for bug 28463: Enable XING crawler by default

* 2013-08-27 - tobias.friedrich@open-xchange.com

 - Fix for bug 26957: Respond with HTTP 400 (Bad Request) when no VEVENTs could be parsed

* 2013-08-27 - thorben.betten@open-xchange.com

 - Fix for bug 28484: Don't signal reminder(s) for declined calendar events
 - Fix for bug 28538: Using sanitizing URL-encode routine in deferrer bundle (approved by it-sec)