@@ -17,6 +17,8 @@ Import-Package: com.openexchange.contact,
  com.openexchange.groupware.container,
  com.openexchange.groupware.contexts,
  com.openexchange.groupware.impl,
+ com.openexchange.groupware.ldap,
+ com.openexchange.groupware.notify,
  com.openexchange.groupware.search,
  com.openexchange.groupware.tools.mappings,
  com.openexchange.groupware.tools.mappings.database,
