@@ -10,6 +10,7 @@ Import-Package: com.openexchange.api2,
  com.openexchange.config,
  com.openexchange.data.conversion.ical,
  com.openexchange.data.conversion.ical.itip,
+ com.openexchange.databaseold,
  com.openexchange.exception,
  com.openexchange.freebusy,
  com.openexchange.groupware,
