@@ -1,3 +1,7 @@
+* 2013-09-02 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 28230: User fromSource as organizer mail address when sending imip messages.
+
 * 2013-09-02 - marcus.klein@open-xchange.com
 
  - Fix for bug 28627: Fixed a typo in post installation scripts of open-xchange-subscribe package.
